--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
-    %title= content_for?(:title) ? yield(:title) : 'Rsvp'
+    %title= content_for?(:title) ? yield(:title) : 'RSVP'
     %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'Rsvp'}"}
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
